<resources>
    <string name="app_name">Aplikasi Seni Budaya</string>
    <string name="judul">APLIKASI SENI DAN BUDAYA</string>
    <string name="start">START</string>
    <string name="back">BACK</string>
    <string name="close">CLOSE</string>
    <string name="home">HOME</string>
    <string name="pulau1">PULAU SUMATERA</string>
    <string name="pulau2">PULAU JAWA</string>
    <string name="pulau3">PULAU NUSA TENGGARA DAN BALI</string>
    <string name="pulau4">PULAU MALUKU DAN PAPUA</string>
    <string name="pulau5">PULAU KALIMANTAN</string>
    <string name="pulau6">PULAU SULAWESI</string>
    <string name="aceh">ACEH</string>
    <string name="sumut">SUMATERA UTARA</string>
    <string name="sumbar">SUMATERA BARAT</string>
    <string name="dki">DKI JAKARTA</string>
    <string name="jabar">JAWA BARAT</string>
    <string name="jatim">JAWA TIMUR</string>
    <string name="ntb">NUSA TENGGARA BARAT</string>
    <string name="ntt">NUSA TENGGARA TIMUR</string>
    <string name="bali">BALI</string>
    <string name="maluku">MALUKU</string>
    <string name="papua">PAPUA</string>
    <string name="pabar">PAPUA BARAT</string>
    <string name="kalbar">KALIMANTAN BARAT</string>
    <string name="kalteng">KALIMANTAN TENGAH</string>
    <string name="kaltim">KALIMANTAN TIMUR</string>
    <string name="sulut">SULAWESI UTARA</string>
    <string name="sulteng">SULAWESI TENGAH</string>
    <string name="sulsel">SULAWESI SELATAN</string>
    <string name="tartrad">TARI TRADISIONAL</string>
    <string name="lagu">LAGU DAERAH</string>
    <string name="btnvid">Tonton Videonya</string>
    <string name="btnlagu">Dengarkan Lagunya</string>
    <string name="infovid">Baca dan Dengarkan Informasinya</string>
    <string name="infolagu">Baca dan Dengarkan Informasinya</string>
    <string name="saman">TARI SAMAN</string>
    <string name="saman2">Tari Saman adalah sebuah tarian Suku Gayo yang biasa ditampilkan untuk merayakan peristiwa-peristiwa penting dalam adat.
Syair dalam tarian saman mempergunakan Bahasa Gayo. Selain itu biasanya tarian ini juga ditampilkan untuk merayakan kelahiran Nabi Muhammad SAW.
 Tari saman biasanya ditampilkan tidak menggunakan iringan alat musik, akan tetapi menggunakan suara dari para penari dan tepuk tangan mereka yang
 biasanya diikuti dengan memukul dada dan pangkal paha mereka sebagai sinkronisasi dan menghempaskan badan ke berbagai arah. Tarian ini dipandu
 oleh seorang pemimpin yang lazimnya disebut syekh. Tarian ini mencerminkan pendidikan, keagamaan, sopan santun, kepahlawanan, kekompakkan dan kebersamaan.</string>
    <string name="tortor">TARI TOR TOR</string>
    <string name="tortor2">Tari Tor Tor adalah tarian seremonial yang disajikan dengan musik gondang. Secara fisik, Tor Tor merupakan tarian, namun makna
 dari gerakan-gerakannya menunjukkan Tor Tor adalah sebuah media komunikasi, di mana melalui gerakan yang disajikan terjadi interaksi antara orang yang
 mengikuti upacara. Dalam pelaksanaan tarian ini, salah seorang dari hasuhutan (yang mempunyai hajat) akan meminta permintaan kepada penabuh gondang
 dengan kata-kata yang sopan dan santun. Setiap selesai satu permintaan selalu diselingi dengan pukulan gondang dengan ritme tertentu dalam beberapa saat.
 Setelah permintaan dilaksanakan dengan baik maka barisan keluarga suhut yang telah siap menari mengatur susunan tempat berdirinya untuk memulai menari.</string>
    <string name="piring">TARI PIRING</string>
    <string name="piring2">Tari Piring adalah tarian tradisional Minangkabau yang menampilkan atraksi menggunakan piring. Para penari mengayunkan piring di
 tangan mengikuti gerakan-gerakan cepat yang teratur, tanpa satu pun piring yang terlepas dari tangan. Gerakannya diambil dari langkah-langkah dalam silat Minangkabau
 atau silek. Tarian ini diiringi oleh kombinasi alat musik talempong dan saluang. Tempo alunan musik awalnya lembut dan teratur, kemudian lama-kelamaan berubah
 menjadi lebih cepat.</string>
    <string name="lenggangnyai">TARI LENGGANG NYAI</string>
    <string name="lenggangnyai2">Tari Lenggang Nyai adalah tarian khas Jakarta yang diambil dari sebuah cerita rakyat. Banyak pesan dan makna yang ingin disampaikan
 melalui tarian ini, terutama pesan mengenai kebebasan wanita. Tari Lenggang Nyai dikatakan bersumber dari cerita rakyat Betawi, yaitu Nyai Dasimah yang memperjuangkan
 kebebasannya. Dalam pertunjukannya, penari menari dengan gerakan yang lincah yang menggambarkan keceriaan dan keluwesan gadis Betawi. Kelincahan tersebut terlihat dari
 gerak tubuh, kaki, dan tangan para penari yang bergerak cepat tetapi tetap harmonis dengan musik.</string>
    <string name="remo">TARI REMO</string>
    <string name="remo2">Tari Remo adalah tarian untuk penyambutan tamu yang ditampilkan oleh satu orang atau lebih. Menurut sejarahnya, tarian ini merupakan tari yang
 khusus dibawakan oleh penari laki-laki. Pertunjukan Tari Remo umumnya menampilkan kisah pangeran yang berjuang dalam sebuah medan pertempuran. Tetapi tarian ini berkembang
 menjadi ditarikan oleh perempuan, sehingga memunculkan gaya tarian yang lain yaitu Remo Putri. Tarian ini dicirikan dengan gerakan kaki yang rancak dan dinamis dan gerakan
 selendang atau sampur, gerakan anggukan dan gelengan kepala, ekspresi wajah, dan kuda-kuda membuat tarian ini semakin atraktif.</string>
    <string name="merak">TARI MERAK</string>
    <string name="merak2">Tari Merak adalah tarian indah yang mengekspresikan keanggunan gerak dan keindahan tata busana yang diambil dari kehidupan burung merak yang
 terlahir di Tanah Pasundan. Tari ini lebih menggambarkan tingkah laku burung merak jantan yang sering menunjukkan keindahan warna-warni bulu ekornya untuk menarik
 perhatian. Dalam pertunjukannya, tari ini dimainkan oleh tiga penari atau lebih secara berkelompok dan menunjukkan tata busana yang dikenakan yang memiliki motif
 seperti bulu burung merak.</string>
    <string name="pendet">TARI PENDET</string>
    <string name="pendet2">Tari Pendet adalah tarian Bali yang pada awalnya tari ini tercipta sebagai tari pemujaan. Karena perkembangan, tarian ini terjadi perubahan
 dalam gerakan dan dipentaskan sebagai Tarian Ucapan Selamat Datang. Tari Pendet dapat ditarikan oleh laki-laki dan perempuan. Tari ini memiliki banyak jenis gerakan dan
 penari membawa mangkuk perak yang penuh bunga. Pada akhir tarian para penari menaburkan bunga ke arah penonton sebagai ucapan selamat datang.</string>
    <string name="gandrung">TARI GANDRUNG LOMBOK</string>
    <string name="gandrung2">Tari Gandrung Lombok adalah tarian dari Lombok yang dilakukan secara berpasangan antara laki-laki dan perempuan. Tarian ini awalnya
 digunakan untuk menghibur para prajurit setelah pulang dari medan perang. Tarian ini kemudian dikembangkan dan ditata ulang sebagai sebuah kesenian tari pertunjukan oleh
 para seniman di sana, dari segi gerak, busana, maupun jumlah penari. Dalam pertunjukannya, Tari Gandrung Lombok dibagi menjadi 3 babak.</string>
    <string name="jai">TARI JAI</string>
    <string name="jai2">Tari Ja’i adalah tarian tradisional masyarakat Ngada di Flores, Nusa Tenggara Timur (NTT). Tarian ini merupakan tarian yang dilakukan oleh masyarakat
 di sana sebagai ungkapan rasa syukur dan kegembiraan. Selain itu, tari ini sering ditampilkan dalam berbagai acara seperti perayaan, upacara adat dan menyambut tamu kehormatan.
 Berbagai variasi dan perubahan sering dilakukan dalam pertunjukan tari ini namun tidak meninggalkan bentuk aslinya. Tari Ja’i memiliki nilai-nilai penting untuk kehidupan,
 baik dalam bersosial dan bermasyarakat.</string>
    <string name="pocopoco">TARI POCO-POCO</string>
    <string name="pocopoco2">Tari Poco-Poco adalah tarian yang berasal dari Maluku Utara. Awalnya, lagu tarian poco-poco hanya dikenal di lingkungan TNI dan Polri sebagai
 gerakan untuk senam pagi. Tari poco-poco lalu mulai disukai masyarakat pada saat stasiun televisi TVRI Jakarta mulai menyiarkan program dengan nama Dansa Yo Dansa. Lagu
 Poco-Poco diciptakan oleh Arie Sapulette. Gerakan pada tari ini seperti tentara yang sedang senam pagi, dasar gerakan poco-poco, yaitu dua kali gerak ke kanan, dua kali
 gerak ke kiri, mundur, dan memutar. Lama kelamaan, gerakan poco-poco terus berkembang dan bervariasi.</string>
    <string name="sajojo">TARI SAJOJO</string>
    <string name="sajojo2">Tari Sajojo adalah tarian yang menggambarkan kebersamaan yang dirasakan setiap orang. Suasana keceriaan dan semangat kebersamaan ini bisa ditarikan
 oleh laki-laki maupun perempuan. Tari Sajojo juga cara bagi masyarakat Papua untuk menyampaikan pesan selamat datang kepada para tamu kehormatan. Istilah Sajojo diambil
 dari lagu pengiringnya yang berjudul “Sajojo”. Lagu tersebut menceritakan tentang seorang gadis yang diidolakan dan dicintai di kampungnya. Namun yang menjadi ciri khas dari
 tari ini adalah gerakannya yang bersemangat menggambarkan kebahagiaan.</string>
    <string name="yospan">TARI YOSPAN</string>
    <string name="yospan2">Tari Yospan adalah tarian dari Papua Barat yang merupakan penggabungan dari dua jenis tari yaitu Yosim dan Pancar. Tari ini tarian pergaulan yang sering
 dibawakan laki-laki dan perempuan muda sebagai bentuk persahabatan. Tari ini terdiri dari dua regu pemain yaitu regu musisi dan penari. Penari yospan lebih dari satu orang
 dengan gerakan dasar yang penuh semangat, dinamik, dan menarik. Selain itu, tari ini sudah sering ditampilkan pada saat acara-acara adat, kegiatan penyambutan, dan festival
 seni budaya.</string>
    <string name="enggang">TARI ENGGANG</string>
    <string name="mambo_sim">E MAMBO SIMBO</string>
    <string name="mambo_sim2">E Mambo Simbo adalah salah satu lagu daerah yang berasal dari Papua Barat. Lagu E Mambo Simbo ini sangat terkenal terutama di Papua Barat karena memiliki nada dan irama
 yang menggembirakan. Pada lirik lagu ini menjelaskan suka cita pertemuan seorang ayah dengan anaknya. Pada lirik lagu ini berkisah tentang seorang ayah yang kehilangan anaknya bernama Mambo. Sang ayah
 keluar masuk kampung mencari sang anak hingga menemukannya di tengah hutan. Pertemuan ini kemudian dirayakan penuh suka cita dengan menari dan bernyanyi karena Mambo telah kembali.</string>
    <string name="sayange">RASA SAYANGE</string>
    <string name="sayange2">Rasa Sayange adalah salah satu lagu daerah yang berasal dari Maluku. Lagu Rasa Sayange ini sangat terkenal terutama di Maluku karena sering dinyanyikan oleh anak-anak dan
 memiliki rima dan suku kata yang sama seperti pantun dan memiliki pesan seperti pantun. Pada lirik lagu ini memiliki pantun seperti "Mana kancil akan dikejar, kedalam pasar cobalah cari. Masih kecil rajin
 belajar, sudah besar senanglah diri". Lirik lagu ini menyatakan rasa peduli, kasih, dan sayang pada orang dan lingkungan sekitar serta sosial diantara masyarakat secara turun-temurun.</string>
    <string name="play">PLAY</string>
    <string name="pause">PAUSE</string>
    <string name="stop">STOP</string>
    <string name="baksa">TARI BAKSA KEMBANG</string>
    <string name="campak">TARI CAMPAK</string>
    <string name="gandai2">Tari Gandai adalah tarian yang berasal dari Bengkulu. Tari Gandai adalah tari yang gerakannya berayun-ayun sambil mengembangkan dua tangan, seperti burung yang terbang di angkasa. Tarian ini
        diiringi oleh sebuah alat musik bambu tua yang diukir sehingga dapat memberikan suara yang indah. Alat musik itu bernama Serunai. Tari gandai berasal dari kata gando yang berarti ganda atau berpasangan. Tari gandai
        adalah sebuah tari tradisi suku pekal yang zaman dahulu saat berkumpul, bersukacita, menari dengan alunan serunai, dan berbalas pantun.</string>
</resources>