<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_hlm"
    tools:context=".info_ntt">

    <TextView
        android:id="@+id/txt_jai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center_horizontal"
        android:text="@string/jai"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txt_jai2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_jai2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center_horizontal"
        android:text="@string/jai2"
        android:textColor="#000000"
        android:textSize="23.5sp"
        android:textStyle="bold"
        android:background="#3A8EAB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_jai" />

    <ImageButton
        android:id="@+id/btnplayjai"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/play_icon"
        android:contentDescription="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.940" />

    <ImageButton
        android:id="@+id/btnpausejai"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/pause_icon"
        android:contentDescription="@string/pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.940" />

    <ImageButton
        android:id="@+id/btnstopjai"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/stop_icon"
        android:contentDescription="@string/stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.940" />

</androidx.constraintlayout.widget.ConstraintLayout>