<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_hlm"
    tools:context=".home">

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:background="#E8A9CC"
        android:fontFamily="casual"
        android:text="@string/pulau1"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        android:onClick="sumatera"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111"
        tools:ignore="UsingOnClickInXml"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:background="#EDD2A9"
        android:fontFamily="casual"
        android:text="@string/pulau2"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        android:onClick="jawa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button4"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:background="#F1EBB6"
        android:fontFamily="casual"
        android:text="@string/pulau3"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="ntbali"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button5"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:background="#88DFD8"
        android:fontFamily="casual"
        android:text="@string/pulau4"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="malpa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button6"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:background="#9CBFE4"
        android:fontFamily="casual"
        android:text="@string/pulau5"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        android:onClick="kalimantan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button7"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:background="#B8A2DD"
        android:fontFamily="casual"
        android:text="@string/pulau6"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="bold"
        android:onClick="sulawesi"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button8"
        android:layout_width="145dp"
        android:layout_height="89dp"
        android:background="#675050"
        android:fontFamily="casual"
        android:text="@string/close"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>