<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_hlm"
    tools:context=".tari_kalsel">

    <TextView
        android:id="@+id/txt_tarikalsel"
        android:layout_width="400dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:gravity="center_horizontal"
        android:text="@string/baksa"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/gambarbaksa"
        android:layout_width="320dp"
        android:layout_height="220dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/tortor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tarikalsel"
        app:srcCompat="@drawable/baksa" />

    <ImageButton
        android:id="@+id/imgbtn_infotari31"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="245dp"
        android:layout_marginBottom="222dp"
        android:contentDescription="@string/infovid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gambarbaksa"
        app:srcCompat="@drawable/icon_info" />

    <TextView
        android:id="@+id/txt_infotari31"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="245dp"
        android:layout_marginBottom="102dp"
        android:background="#3A8EAB"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/infovid"
        android:textColor="#FFFFFF"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgbtn_infotari31" />

    <ImageButton
        android:id="@+id/imgbtn_videotari31"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="83dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="222dp"
        android:contentDescription="@string/btnvid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgbtn_infotari31"
        app:layout_constraintTop_toBottomOf="@+id/gambarbaksa"
        app:srcCompat="@drawable/icon_video" />

    <TextView
        android:id="@+id/txt_videotari31"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="102dp"
        android:background="#3A8EAB"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/btnvid"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_infotari31"
        app:layout_constraintTop_toBottomOf="@+id/imgbtn_videotari31" />

</androidx.constraintlayout.widget.ConstraintLayout>